added bootstrap in json file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Nepalese at Plattsburgh</title>
   </head>
   <body>
+    <header>
+      <nav id="main-nav"></nav>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
